--- a/index.html
+++ b/index.html
@@ -293,35 +293,14 @@
                     <a href="detailPages/facilities/arena.html" class="home__facilityLink">
                         <img src="assets/images/staticPhotos/match.jpg" alt="Tesis Fotoğrafı"
                             class="home__facilityPhoto">
-                        <span class="home__facilityName">ARENA</span>
+                        <span class="home__facilityName">PAZAR</span>
                     </a>
                 </div>
                 <div class="home__sideItem">
-                    <a href="" class="home__facilityLink">
+                    <a href="detailPages/facilities/kaos.html" class="home__facilityLink">
                         <img src="assets/images/staticPhotos/match.jpg" alt="Tesis Fotoğrafı"
                             class="home__facilityPhoto">
-                        <span class="home__facilityName">Tesis Adı</span>
-                    </a>
-                </div>
-                <div class="home__sideItem">
-                    <a href="" class="home__facilityLink">
-                        <img src="assets/images/staticPhotos/match.jpg" alt="Tesis Fotoğrafı"
-                            class="home__facilityPhoto">
-                        <span class="home__facilityName">Tesis Adı</span>
-                    </a>
-                </div>
-                <div class="home__sideItem">
-                    <a href="" class="home__facilityLink">
-                        <img src="assets/images/staticPhotos/match.jpg" alt="Tesis Fotoğrafı"
-                            class="home__facilityPhoto">
-                        <span class="home__facilityName">Tesis Adı</span>
-                    </a>
-                </div>
-                <div class="home__sideItem">
-                    <a href="" class="home__facilityLink">
-                        <img src="assets/images/staticPhotos/match.jpg" alt="Tesis Fotoğrafı"
-                            class="home__facilityPhoto">
-                        <span class="home__facilityName">Tesis Adı</span>
+                        <span class="home__facilityName">KAOS</span>
                     </a>
                 </div>
             </div>
