--- a/facilities.html
+++ b/facilities.html
@@ -67,56 +67,23 @@
             </div>
             <div class="facilities__item">
                 <a class="--mobile"><span class="facilities__number">1</span></a>
-                <a href="detailPages/facilities/arena.html"><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
+                <a href="detailPages/facilities/pazar.html"><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
                         class="facilities__photo"></a>
-                <a class="facilities__link" href="detailPages/facilities/arena.html"><span class="facilities__facility">ARENA</span></a>
-                <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-check"></i></span></a>
-                <a class="-center"><span class="facilities__fieldCount">3</span></a>
-                <a class="facilities__link" href="detailPages/facilities/arena.html">
+                <a class="facilities__link" href="detailPages/facilities/pazar.html"><span class="facilities__facility">PAZAR</span></a>
+                <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-xmark"></i></span></a>
+                <a class="-center"><span class="facilities__fieldCount">1</span></a>
+                <a class="facilities__link" href="detailPages/facilities/pazar.html">
                     <span class="facilities__detail">GÖRÜNTÜLE</span>
                 </a>
             </div>
             <div class="facilities__item">
                 <a class="--mobile"><span class="facilities__number">2</span></a>
-                <a href=""><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
+                <a href="detailPages/facilities/kaos.html"><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
                         class="facilities__photo"></a>
-                <a class="facilities__link" href=""><span class="facilities__facility">TESİS ADI</span></a>
+                <a class="facilities__link" href="detailPages/facilities/kaos.html"><span class="facilities__facility">KAOS</span></a>
                 <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-xmark"></i></span></a>
-                <a class="-center"><span class="facilities__fieldCount">2</span></a>
-                <a class="facilities__link" href="">
-                    <span class="facilities__detail">GÖRÜNTÜLE</span>
-                </a>
-            </div>
-            <div class="facilities__item">
-                <a class="--mobile"><span class="facilities__number">3</span></a>
-                <a href=""><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
-                        class="facilities__photo"></a>
-                <a class="facilities__link" href=""><span class="facilities__facility">TESİS ADI</span></a>
-                <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-check"></i></span></a>
-                <a class="-center"><span class="facilities__fieldCount">2</span></a>
-                <a class="facilities__link" href="">
-                    <span class="facilities__detail">GÖRÜNTÜLE</span>
-                </a>
-            </div>
-            <div class="facilities__item">
-                <a class="--mobile"><span class="facilities__number">4</span></a>
-                <a href=""><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
-                        class="facilities__photo"></a>
-                <a class="facilities__link" href=""><span class="facilities__facility">TESİS ADI</span></a>
-                <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-xmark"></i></span></a>
-                <a class="-center"><span class="facilities__fieldCount">2</span></a>
-                <a class="facilities__link" href="">
-                    <span class="facilities__detail">GÖRÜNTÜLE</span>
-                </a>
-            </div>
-            <div class="facilities__item">
-                <a class="--mobile"><span class="facilities__number">5</span></a>
-                <a href=""><img src="assets/images/facilities/default.png" alt="Tesis Fotoğrafı"
-                        class="facilities__photo"></a>
-                <a class="facilities__link" href=""><span class="facilities__facility">TESİS ADI</span></a>
-                <a class="-center"> <span class="facilities__type"><i class="fa-solid fa-circle-check"></i></span></a>
-                <a class="-center"><span class="facilities__fieldCount">2</span></a>
-                <a class="facilities__link" href="">
+                <a class="-center"><span class="facilities__fieldCount">1</span></a>
+                <a class="facilities__link" href="detailPages/facilities/kaos.html">
                     <span class="facilities__detail">GÖRÜNTÜLE</span>
                 </a>
             </div>
