last fix before deploy

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="home__smallBox">
                             <span class="home__count">2</span>
-                            <a class="home__boxLink" href="">TEKNİK</a>
+                            <a class="home__boxLink" href="coachs.html">TEKNİK</a>
                         </div>
                     </div>
                 </div>
