--- a/mathces.html
+++ b/mathces.html
@@ -142,11 +142,11 @@
                 </div>
             </div>
             <div class="footerSocial">
-                <a href="" class="footerSocialLink">
+                <a href="https://www.instagram.com/gokturk.dogan?igsh=cWtoN2U0M203djNv&utm_source=qr" class="footerSocialLink">
                     <i class="fa-brands fa-instagram"></i></a>
-                <a href="" class="footerSocialLink">
+                <a href="https://x.com/gokturkdogann?s=21" class="footerSocialLink">
                     <i class="fa-brands fa-twitter"></i></a>
-                <a href="" class="footerSocialLink">
+                <a href="https://github.com/gokturkdogan" class="footerSocialLink">
                     <i class="fa-brands fa-github"></i></a>
             </div>
         </div>
