--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     2
                                 </span>
@@ -117,7 +117,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     3
                                 </span>
@@ -129,7 +129,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     4
                                 </span>
@@ -141,7 +141,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     5
                                 </span>
@@ -153,7 +153,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     6
                                 </span>
@@ -165,7 +165,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     7
                                 </span>
@@ -177,7 +177,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     8
                                 </span>
@@ -189,7 +189,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     9
                                 </span>
@@ -201,7 +201,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     10
                                 </span>
@@ -213,7 +213,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     11
                                 </span>
@@ -225,7 +225,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     12
                                 </span>
@@ -237,7 +237,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     13
                                 </span>
@@ -249,7 +249,7 @@
                             </a>
                         </div>
                         <div class="home__trendItem">
-                            <a href="detailPages/players/coming.html" class="home__trendItemLink">
+                            <a href="detailPages/players/soon.html" class="home__trendItemLink">
                                 <span class="home__trendNumber">
                                     14
                                 </span>
@@ -328,11 +328,11 @@
                 </div>
             </div>
             <div class="footerSocial">
-                <a href="" class="footerSocialLink">
+                <a href="https://www.instagram.com/gokturk.dogan?igsh=cWtoN2U0M203djNv&utm_source=qr" class="footerSocialLink">
                     <i class="fa-brands fa-instagram"></i></a>
-                <a href="" class="footerSocialLink">
+                <a href="https://x.com/gokturkdogann?s=21" class="footerSocialLink">
                     <i class="fa-brands fa-twitter"></i></a>
-                <a href="" class="footerSocialLink">
+                <a href="https://github.com/gokturkdogan" class="footerSocialLink">
                     <i class="fa-brands fa-github"></i></a>
             </div>
         </div>
