--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="home">
         <div class="home__content">
             <div class="home__header">
-                <span class="home__headerTitle">Match Maker</span>
+                <span class="home__headerTitle">Xunar Sync Hub</span>
             </div>
             <hr>
             <div class="home__boxes">
