match details added

--- a/coachs.html
+++ b/coachs.html
@@ -60,13 +60,19 @@
                 <div class="players__headLeft">
                     <span class="players__headSpan">#</span>
                 </div>
+                <div class="players__headRight -coach">
+                    <span class="players__headSpan -coach">Galibiyet</span>
+                </div>
             </div>
             <div class="players__item">
                 <div class="players__itemLeft">
                     <span class="players__span">1</span>
                     <a href="detailPages/players/soon.html"><img src="assets/images/players/default.png"
                             alt="Oyuncu Fotoğrafı" class="players__photo"></a>
-                    <a href="detailPages/players/soon.html" class="players__name" style="width: unset;">REŞAT BAYNAZOĞLU</a>
+                    <a href="detailPages/players/soon.html" class="players__name" style="width: unset;">CEM BARIŞ HOCAOĞLU</a>
+                </div>
+                <div class="players__itemRgiht">
+                    <span class="players__span">1</span>
                 </div>
             </div>
             <div class="players__item">
@@ -74,7 +80,10 @@
                     <span class="players__span">2</span>
                     <a href="detailPages/players/soon.html"><img src="assets/images/players/default.png"
                             alt="Oyuncu Fotoğrafı" class="players__photo"></a>
-                    <a href="detailPages/players/soon.html" class="players__name" style="width: unset;">CEM BARIŞ HOCAOĞLU</a>
+                    <a href="detailPages/players/soon.html" class="players__name" style="width: unset;">REŞAT BAYNAZOĞLU</a>
+                </div>
+                <div class="players__itemRgiht">
+                    <span class="players__span">0</span>
                 </div>
             </div>
         </div>
