--- a/detailPages/facilities/pazar.html
+++ b/detailPages/facilities/pazar.html
@@ -123,7 +123,7 @@
                     <div class="facility__matchesPlayedContentItem">
                         <span class="facility__matchesPlayedItemSpan">1</span>
                         <a href="../matches/5Temmuz.html" class="facility__matchesPlayedItemSpan --link">05/07/2025</a>
-                        <span class="facility__matchesPlayedItemSpan">0:0</span>
+                        <span class="facility__matchesPlayedItemSpan">14:07</span>
                     </div>
                 </div>
             </div>
@@ -138,15 +138,15 @@
                     <div class="facility__matchesGoalKingContentStats">
                         <div class="facility__matchesGoalKingContentStatsRow">
                             <span class="facility__infoContentBold">OYUNCU:</span>
-                            <span class="facility__infoContentRegular">ORNEK</span>
+                            <span class="facility__infoContentRegular">GÖKTÜRK</span>
                         </div>
                         <div class="facility__matchesGoalKingContentStatsRow">
                             <span class="facility__infoContentBold">MEVKİ:</span>
-                            <span class="facility__infoContentRegular">ORNEK</span>
+                            <span class="facility__infoContentRegular">FORVET</span>
                         </div>
                         <div class="facility__matchesGoalKingContentStatsRow">
                             <span class="facility__infoContentBold">ATTIĞI GOL:</span>
-                            <span class="facility__infoContentRegular">3</span>
+                            <span class="facility__infoContentRegular">4</span>
                         </div>
                     </div>
                 </div>
@@ -160,7 +160,7 @@
             <div class="facility__calatogContent">
                 <div class="container">
                     <div class="panel active"
-                        style="background-image: url('../../assets/images/facilities/arena/1.jfif')">
+                        style="background-image: url('../../assets/images/matches/5temmuz.jpeg')">
                     </div>
                     <div class="panel" style="background-image: url('../../assets/images/facilities/arena/2.jfif')">
                     </div>
