--- a/detailPages/matches/5Temmuz.html
+++ b/detailPages/matches/5Temmuz.html
@@ -152,19 +152,19 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">ALİ</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">SEZER</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
@@ -172,50 +172,50 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">AHMET</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">DOĞAN</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">KEREM</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">NAİM</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">GÖKTÜRK</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
                             </div>
@@ -230,9 +230,9 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">ÜMİT</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
@@ -240,18 +240,18 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">RIFAT</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">MURAT</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
@@ -260,9 +260,9 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">HALİL</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
@@ -270,9 +270,9 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">BİRKAN</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
@@ -280,19 +280,19 @@
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">DEVRİM</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                 </span>
                             </div>
                             <div class="matchDetail__squadContentTeamItem">
                                 <a href="">ÖZGÜR</a>
                                 <span class="matchDetail__squadPoint">
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
-                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                     <i class="fa-regular fa-star"></i>
                                 </span>
@@ -301,6 +301,15 @@
                                 <a href="">REŞAT (Teknik Direktör)</a>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="matchDeail__squad">
+                    <div class="matchDetail__header">
+                        <span class="matchDetail__headerTitle">Maç Fotoğrafı</span>
+                    </div>
+                    <hr>
+                    <div class="matchDetail__squadContent">
+                        <img class="matchDetail__photo" src="../../assets/images/matches/5temmuz.jpeg" alt="match_photo">
                     </div>
                 </div>
             </div>
@@ -314,19 +323,77 @@
                 <!-- <img src="../../assets/images/staticPhotos/scoreboard.jpg" alt="Skorboard"> -->
                 <div class="matchDetail__scoreBoard">
                     <div class="matchDetail__scoreBoardContent">
-                        <span class="matchDetail__scoreBoardScore">00</span>
-                        <span class="matchDetail__scoreBoardScore">00</span>
+                        <span class="matchDetail__scoreBoardScore">14</span>
+                        <span class="matchDetail__scoreBoardScore">07</span>
                     </div>
                 </div>
                 <div class="matchDetail__scoresContentGoals">
-                    <!--                     <div class="matchDetail__scoresContentGoalsItem">
+                    <div class="matchDetail__scoresContentGoalsItem">
                         <a href="">GÖKTÜRK</a>
                         <div class="matchDetail__scoresContentGoalsItemStars">
                             <i class="fa-regular fa-futbol"></i>
                             <i class="fa-regular fa-futbol"></i>
                             <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
                         </div>
-                    </div> -->
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">NAİM</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">DOĞAN</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">KEREM</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">AHMET</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">DEVRİM</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>                    
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">ÖZGÜR</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">HALİL</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
+                    <div class="matchDetail__scoresContentGoalsItem">
+                        <a href="">BİRKAN</a>
+                        <div class="matchDetail__scoresContentGoalsItemStars">
+                            <i class="fa-regular fa-futbol"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
