--- a/players.html
+++ b/players.html
@@ -76,10 +76,10 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Forvet</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
             </div>
@@ -93,10 +93,10 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Ortasaha</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
             </div>
@@ -110,10 +110,10 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
             </div>
@@ -127,11 +127,11 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Kaleci</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i></span>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i></span>
                 </div>
             </div>
             <div class="players__item">
@@ -144,9 +144,9 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
@@ -161,11 +161,11 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i></span>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i></span>
                 </div>
             </div>
             <div class="players__item">
@@ -178,10 +178,10 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Ortasaha</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
             </div>
@@ -195,9 +195,9 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Kaleci</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
@@ -212,8 +212,8 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
@@ -229,11 +229,11 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Ortasaha</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i></span>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i></span>
                 </div>
             </div>
             <div class="players__item">
@@ -246,10 +246,10 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
             </div>
@@ -263,9 +263,9 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Ortasaha</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
@@ -280,9 +280,9 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Defans</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
@@ -297,9 +297,9 @@
                 </div>
                 <div class="players__itemRight">
                     <span class="players__position">Forvet</span>
-                    <span class="players__rating"><i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
-                        <i class="fa-regular fa-star"></i>
+                    <span class="players__rating"><i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
                         <i class="fa-regular fa-star"></i>
                         <i class="fa-regular fa-star"></i></span>
                 </div>
